--- a/slides/main.css
+++ b/slides/main.css
@@ -1,6 +1,10 @@
 <style type="text/css">
 
-/* .list { max-height: 100%; float: left; max-width: 60% } */
+.right { max-height: 100%; float: right; max-width: 60% }
+.left { max-height: 100%; float: left; max-width: 60% }
+
+.reveal div.center { padding-top: 2em}
+
 
 .image { min-width: 35%; height: 100%; float: right; max-width: 35% }
 
